@@ -40,6 +40,7 @@ output-sk.c output-sk.h \
 output-svg.c output-svg.h \
 output-p2e.c output-p2e.h \
 output-emf.c output-emf.h \
+output-dxf.c output-dxf.h \
 $(output_swf_src)
 
 libautotrace_a_SOURCES = version.c               \
